creating nav bars

--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
-<html> 
-
+<html lang = "en">
+    <head> 
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+        <title>Portfolio Website</title>
+    </head> 
+    <body>
+        <header>
+            <a href="#" class = "logo"> Akeena</a>
+            <nav>
+                <a href ="#" class = "nav_bar"> About Me</a>
+                <a href = "#" class = "nav_bar"> Skills</a>
+                <a href = "#" class = "nav_bar"> Projects</a>
+                <a href = "#" class="nav_bar"> Experience</a>
+            </nav>
+        </header>
+        
+    </body>
 </html>
