--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
                 <a href = "#" class="nav_bar"> Experience</a>
             </nav>
         </header>
+        <section class = "home">
+            <div class = "home_img">
+                <img src ="newHeadshot (1).JPG">
+            </div>
+            <div class = "home-content">
+                <h1> Hi there, <span> my name is Akeena </span></h1>
+                <h3 class="typing_text"> I'm a <span></span></h3>
+                <div class = "social_icons">
+                    <a href = "#"><i class = "fa-brands fa-linkedin"></i> </a>
+                    <a href = "#"><i class = "fa-brands fa-github"></i> </a>
+                </div>
+            </div>
+        </section>
         
     </body>
 </html>
