updated logo code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
         <title>Portfolio Website</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head> 
     <body>
         <header>
@@ -23,8 +24,8 @@
                 <h1> Hi there, <span> my name is Akeena </span></h1>
                 <h3 class="typing_text"> I'm a <span></span></h3>
                 <div class = "social_icons">
-                    <a href = "#"><i class = "fa-brands fa-linkedin"></i> </a>
-                    <a href = "#"><i class = "fa-brands fa-github"></i> </a>
+                    <a href = "#"><i class = "fa fa-linkedin"></i> </a>
+                    <a href = "#"><i class = "fa fa-github"></i> </a>
                 </div>
             </div>
         </section>
