created css file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <h1> Hi there, <span> my name is Akeena </span></h1>
                 <h3 class="typing_text"> I'm a <span></span></h3>
                 <div class = "social_icons">
-                    <a href = "#"><i class = "fa fa-linkedin"></i> </a>
-                    <a href = "#"><i class = "fa fa-github"></i> </a>
+                    <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
+                    <a href = "https://github.com/akeenahall42029/"><i class = "fa fa-github"></i> </a>
                 </div>
             </div>
         </section>
