--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 <img src ="newHeadshot (1).JPG">
             </div>
             <div class = "home-content">
-                <h1> Hi there, <span> my name is Akeena </span></h1>
+                <h1> Hi there, <span> My name is Akeena </span></h1>
                 <h3 class="typing_text"> I'm a <span></span></h3>
+                <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
                     <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
                     <a href = "https://github.com/akeenahall42029/"><i class = "fa fa-github"></i> </a>
