--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class = "home-content">
                 <h1> Hi there, <span> My name is Akeena </span></h1>
-                <h3 class="typing_text"> I'm a <span></span></h3>
+                <h3 class="typing_text"> I'm a <span> Backend Developer</span></h3>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
                     <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
