--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head> 
     <body>
-        <header>
+        <header class = "header_bar">
             <a href="#" class = "logo"> Akeena</a>
             <nav>
                 <a href ="#" class = "nav_bar"> About Me</a>
