--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href = "#" class = "nav_bar"> Skills</a>
                 <a href = "#" class = "nav_bar"> Projects</a>
                 <a href = "#" class="nav_bar"> Experience</a>
+                <a href = "" class = "nav_bar"> Blog</a>
             </nav>
         </header>
         <section class = "home">
@@ -23,7 +24,7 @@
             </div>
             <div class = "home-content">
                 <h1> Hi there, <span> My name is Akeena </span></h1>
-                <h3 class="typing_text"> I'm a <span> Backend Developer</span></h3>
+                <h3 class="typing_text"> I'm a <span> </span></h3>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
                     <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
