--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css" />
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     </head> 
     <body>
         <header class = "header_bar">
@@ -24,7 +25,17 @@
             </div>
             <div class = "home-content">
                 <h1> Hi there, <span> My name is Akeena </span></h1>
-                <h3 class="typing_text"> I'm a <span> </span></h3>
+                <h3 class="typing_text"> I'm a <span class="typed_words"> </span></h3>
+                <script> 
+                    var typed = new Typed('#typed_words', {
+                        strings: ["Backend Developer", "Researcher", "Jetsetter", "Content Creator"],
+                        typeSpeed: 70, 
+                        backSpeed: 70, 
+                        loop: true
+                    }
+
+                    )
+                </script>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
                     <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
