increased logo size

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </script>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
-                    <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin"></i> </a>
-                    <a href = "https://github.com/akeenahall42029/"><i class = "fa fa-github"></i> </a>
+                    <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin" style ="font-size: 50px"></i> </a>
+                    <a href = "https://github.com/akeenahall42029/"><i class = "fa fa-github" style ="font-size: 50px"></i> </a>
                 </div>
             </div>
         </section>
