aligned nav elements to the right

--- a/index.html
+++ b/index.html
@@ -27,21 +27,27 @@
                 <h1> Hi there, <span> My name is Akeena </span></h1>
                 <h3 class="typing_text"> I'm a <span class="typed_words"> </span></h3>
                 <script> 
-                    var typed = new Typed('#typed_words', {
+                    var typed = new Typed('.typed_words', {
                         strings: ["Backend Developer", "Researcher", "Jetsetter", "Content Creator"],
                         typeSpeed: 70, 
                         backSpeed: 70, 
                         loop: true
-                    }
-
-                    )
+                    });
                 </script>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
                 <div class = "social_icons">
-                    <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin" style ="font-size: 50px"></i> </a>
+                    <a href = "https://www.linkedin.com/in/akeenahall/"><i class = "fa fa-linkedin-square" style ="font-size: 50px"></i> </a>
                     <a href = "https://github.com/akeenahall42029/"><i class = "fa fa-github" style ="font-size: 50px"></i> </a>
                 </div>
             </div>
+        </section>
+        <section class ="skills">
+
+        </section>
+        <section class ="projects"> 
+        </section>
+        <section class="experience">
+
         </section>
         
     </body>
