--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
-        <title>Portfolio Website</title>
+        <title> Akeena Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css" />
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+        <link src="script.js">
     </head> 
     <body>
         <header class = "header_bar">
             <a href="#" class = "logo"> Akeena</a>
+            <button class = "mobile-menu-toggle" aria-label="Toggle mobile menu">
+                <i class="fas fa-bars"></i>
+            </button>
             <nav>
                 <a href ="#" class = "nav_bar"> About Me</a>
                 <a href = "#" class = "nav_bar"> Skills</a>
@@ -21,7 +25,7 @@
         </header>
         <section class = "home">
             <div class = "home_img">
-                <img src ="newHeadshot (1).JPG">
+                <img src ="newHeadshot (1).JPG" alt="Akeean's Professional Headshot">
             </div>
             <div class = "home-content">
                 <h1> Hi there, <span> My name is Akeena </span></h1>
@@ -32,6 +36,38 @@
                         typeSpeed: 70, 
                         backSpeed: 70, 
                         loop: true
+                    });
+
+                      // Mobile menu toggle
+                    const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
+                    const navMenu = document.getElementById('nav-menu');
+                    const menuIcon = mobileMenuToggle.querySelector('i');
+
+                    mobileMenuToggle.addEventListener('click', () => {
+                        navMenu.classList.toggle('active');
+                        if (navMenu.classList.contains('active')) {
+                            menuIcon.classList.replace('fa-bars', 'fa-times');
+                        } else {
+                            menuIcon.classList.replace('fa-times', 'fa-bars');
+                        }
+                    });
+
+                    // Close mobile menu when clicking on a link
+                    document.querySelectorAll('nav a').forEach(link => {
+                        link.addEventListener('click', () => {
+                            navMenu.classList.remove('active');
+                            menuIcon.classList.replace('fa-times', 'fa-bars');
+                        });
+                    });
+
+                    // Header background on scroll
+                    window.addEventListener('scroll', () => {
+                        const header = document.querySelector('header');
+                        if(window.scrollY > 100) {
+                            header.style.background = 'rgba(122, 90, 67, 0.98)';
+                        } else {
+                            header.style.background = 'rgba(122, 90, 67, 0.95)';
+                        }
                     });
                 </script>
                 <p> Lorem gejiakj f arnjkfj aoianark fvjrkavk </p>
