updated bar for small screen view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class = "header_bar">
             <a href="#" class = "logo"> Akeena</a>
             <button class = "mobile-menu-toggle" aria-label="Toggle mobile menu">
-                <i class="fas fa-bars"></i>
+                <i class="fa fa-bars"></i>
             </button>
             <nav>
                 <a href ="#" class = "nav_bar"> About Me</a>
